(fix) remove button style and card shadow in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@
   --price-font-color: var(--purple-200);
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --background: #0a0a0a;
     --foreground: var(--gray-90);
@@ -45,6 +45,7 @@
     --menu-shadow: rgba(255, 255, 255, 0.1);
     --desk-menu-shadow: rgba(255, 255, 255, 0.25);
     --breadcrumb-font-color: var(--purple-100);
+    --card-shadow: rgba(255, 255, 255, 0.2);
     --price-font-color: var(--purple-100);
   }
 }
